--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1>Welcome to RatingBoost!</h1>
-<h2>We are the leading solution for Review Management, a platform that allows businesses to monitor and improve their overall reputation. Sign up and start improving your ratings today!</h2>
+<h2>We are the leading solution for Review Management, a platform that allows businesses to monitor and improve their reputation. Sign up and start improving your ratings today!</h2>
