--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Businesses</h1>
+<div class="jumbotron">
+  <h2>RatingBoost is the best way to manage customer feedback and improve your overall reputation as a business!</h2>
+  <h3>Collect reviews in your own personal database, identify common problems and find specific areas where you can imporve your business, and immediately resolve negative customer experiences.<br><br>
+    Start managing your reputation today with packages as low as $9/month!<h3>
+</div>
 
 <table class="table table-hover table-condensed">
   <thead>
