--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,6 @@
 .jumbotron {
 	background-color:transparent;
+
 	font-family: Arial;
 	color: #eee;
 	text-shadow: 1px 1px 2px #000;
@@ -32,4 +33,5 @@
 body {
 	background-image: url("https://s3-us-west-1.amazonaws.com/ratingboost/background.jpg"); 
     background-size: cover;
+    background-repeat:no-repeat;
 }
