--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -6,7 +6,7 @@
     Start managing your reputation today with packages as low as $9/month!<h3>
 </div>
 
-<table class="table table-hover table-condensed">
+<table class="table table-condensed">
   <thead>
     <tr>
       <th>Name</th>
