add user accounts w devise

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,7 +33,9 @@
 
 }
 
-
+.btn-link {
+	color: #ddd;
+}
 body {
 	background-color: #113758;
 	background-image: url("https://s3-us-west-1.amazonaws.com/ratingboost/bg.jpg"); 
