--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -22,7 +22,7 @@
         <td><%= business.name %></td>
         <td><%= business.address %></td>
         <td><%= business.phone %></td>
-        <td><%= business.website %></td>
+        <td><%= link_to business.website, business.website %></td>
         <td><%= link_to 'Show', business, class: "btn btn-link" %></td>
         <td><%= link_to 'Edit', edit_business_path(business), class: "btn btn-link" %></td>
         <td><%= link_to 'Destroy', business, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %></td>
