--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,10 +1,10 @@
 .jumbotron {
 	background-color:transparent;
-
 	font-family: Arial;
 	color: #eee;
 	text-shadow: 1px 1px 2px #000;
 	h2 {
+		font-size: 40px;
 		color: #fff;
 		font-weight: bold;
 	}
