--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,6 +16,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "About", pages_about_path %></li>
         <li><%= link_to "Contact", pages_contact_path %></li>
+        <li><%= link_to "Buy", pages_buy_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
