--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,36 +1,20 @@
 
 <div class="jumbotron">
-  <h2>RatingBoost is the best way to manage customer feedback and improve your overall reputation as a business!</h2>
-  <h3>Collect reviews in your own personal database, identify common problems and find specific areas where you can improve your business, and immediately resolve negative customer experiences.<br><br>
-    Start managing your reputation today with packages as low as $9/month!<h3>
+  <h2>RavnReviews is the best way to capture customer feedback on-site and improve your overall reputation as a business!</h2>
+  <h3>Collect reviews on-site in your own personal database, identify common problems where you can improve your business, and immediately resolve negative customer experiences.<br><br>
+    Start today with packages as low as $9/month!<h3>
 </div>
 
 <table class="table table-condensed">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Phone</th>
-      <th>Website</th>
+      
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @businesses.each do |business| %>
-      <tr>
-        <td><%= business.name %></td>
-        <td><%= business.address %></td>
-        <td><%= business.phone %></td>
-        <td><%= link_to business.website, business.website %></td>
-        <td><%= link_to 'Show', business, class: "btn btn-link" %></td>
-        <td><%= link_to 'Edit', edit_business_path(business), class: "btn btn-link" %></td>
-        <td><%= link_to 'Destroy', business, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %></td>
-      </tr>
-    <% end %>
+    
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Business', new_business_path, class: "btn btn-link" %>
