--- a/app/views/pages/buy.html.erb
+++ b/app/views/pages/buy.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#buy</h1>
-<p>Find me in app/views/pages/buy.html.erb</p>
+<h1>Choose your package</h1>
+<p>Basic | Small Business | Enterprise</p>
