nav bg color and logo

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,6 +21,10 @@
 			color: #fff;
 			font-size: 30px;
 			font-weight: bold;
+			background-image: url("https://s3-us-west-1.amazonaws.com/ratingboost/logo.png"); 
+	  	    background-repeat:no-repeat;
+	  	    width: 120px;
+	  	    height: 58px; 
 		}
 	}
 	border: 0px;
