--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -20,6 +20,14 @@
     <%= f.text_area :comment, class: "form-control" %>
   </div>
   <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :email %>
+    <%= f.text_field :email, class: "form-control" %>
+  </div>
+  <div class="actions">
     <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
