--- a/app/views/pages/buy.html.erb
+++ b/app/views/pages/buy.html.erb
@@ -1,2 +1,56 @@
-<h1>Choose your package</h1>
-<p>Basic | Small Business | Enterprise</p>
+<div class="page-header">
+        <h1>Choose your package</h1>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Basic</h3>
+            </div>
+            <div class="panel-body">
+              <h2>$49 / month</h2>
+              <p>Free Shipping</p>
+              <p>1 GB Memory</p>
+              <p>1 Free Terminal</p>
+              <p>50 Email Credits / month</p>
+              <p class="strike">Premium Verified Reviews</p>
+              <p>24/7 Email Technical Support</p>
+              <%= link_to 'Start Today', new_business_path, class: "btn btn-primary"%>
+            </div>
+          </div>
+        </div><!-- /.col-sm-4 -->
+        <div class="col-sm-4">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">Small Business</h3>
+            </div>
+            <div class="panel-body">
+              <h2>$99 / month</h2>
+              <p>Free Shipping</p>
+              <p>5 GB Memory</p>
+              <p>1 Free Terminal</p>
+              <p>200 Email Credits / month</p>
+              <p>1 Premium Verified Review</p>
+              <p>24/7 Email Technical Support</p>
+              <%= link_to 'Start Today', new_business_path, class: "btn btn-primary"%>
+            </div>
+          </div>
+        </div><!-- /.col-sm-4 -->
+        <div class="col-sm-4">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title">Enterprise</h3>
+            </div>
+            <div class="panel-body">
+              <h2>$199 / month</h2>
+                            <p>Free Shipping</p>
+              <p>Unlimited Memory</p>
+              <p>3 Free Terminals</p>
+              <p>Unlimited Email Credits / month</p>
+              <p>10 Premium Verified Reviews</p>
+              <p>24/7 Email and Phone Technical Support</p>
+              <%= link_to 'Start Today', new_business_path, class: "btn btn-primary"%>
+            </div>
+          </div>
+        </div><!-- /.col-sm-4 -->
+      </div>
