--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,6 @@
+.strike {
+    text-decoration: line-through;
+}
 .jumbotron {
 	background-color:transparent;
 	font-family: Arial;
@@ -9,6 +12,24 @@
 		font-weight: bold;
 	}
 
+}
+.page-header {
+	margin-top:0px;
+}
+.panel {
+	text-shadow: 0px 0px 0px;
+	text-align: center;
+}
+.panel-title {
+	font-size: 32px;
+}
+.panel-body p {
+	color: #222;
+}
+.panel-body h2 {
+	margin-top:0px;
+	color: #111;
+	font-size: 24px;
 }
 .navbar-default {
 	.container-fluid {
@@ -39,6 +60,12 @@
 
 .btn-link {
 	color: #ddd;
+}
+.btn btn-primary {
+	color: #fff;
+}
+a:visited {
+	color: #fff;	
 }
 body {
 	background-color: #000;
