--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,8 +32,12 @@
   </div>
 <% end %>
 
+<h3>Upgrade my account</h3>
+
+<p>Easily Upgrade! <%= button_to "Upgrade my account", registration_path(resource_name), class: "btn btn-success" %></p>
+
 <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %></p>
 
-<%= link_to "Back", :back %>
+<%= link_to "Back", :back, class: "btn btn-link" %>
