--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -80,6 +80,6 @@ a:visited {
 }
 body {
 	background-color: #000;
-	background-image: url("https://s3-us-west-1.amazonaws.com/ratingboost/bg.jpg"); 
+	background-image: url("https://s3-us-west-1.amazonaws.com/ratingboost/bgdark.jpg"); 
     background-repeat:no-repeat;
 }
