--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,27 +1,47 @@
+<div class="row">
+	<div class="col-md-3">
+		<%= image_tag @business.image_url %>
 
-<%= image_tag @business.image_url %>
+		<h2>
+ 		 <%= @business.name %>
+		</h2>
 
-<p>
-  <strong>Name:</strong>
-  <%= @business.name %>
-</p>
+		<p>
+		  <strong>Address:</strong>
+ 		 <%= @business.address %>
+		</p>
 
-<p>
-  <strong>Address:</strong>
-  <%= @business.address %>
-</p>
+		<p>
+		  <strong>Phone:</strong>
+ 		  <%= @business.phone %>
+		</p>
 
-<p>
-  <strong>Phone:</strong>
-  <%= @business.phone %>
-</p>
+		<p>
+		  <strong>Website:</strong>
+ 		 <%= link_to @business.website, @business.website %>
+		</p>
 
-<p>
-  <strong>Website:</strong>
-  <%= @business.website %>
-</p>
+		<%= link_to "Write a Review", new_business_review_path(@business), class: "btn btn-primary" %>
+	</div>
 
-<%= link_to "Write a Review", new_business_review_path(@business), class: "btn btn-primary" %>
+	<div class="col-md-9">
+	  <% if @reviews.blank? %>
+	  	<h3>No reviews yet. Ask for some!</h3>
+	  <% else %>
+	  	<%= @reviews.each do |review| %>
+		<p><%= review.name %></p>
+		<p><%= review.email %></p>
+		<p><%= review.rating %></p>
+		<p><%= review.comment %></p>
+  		<% end %>
+	  <% end %>
+	
+	</div>
+</div>
+
+
+
+
 
 <%= link_to 'Edit', edit_business_path(@business), class: "btn btn-link" %> |
 <%= link_to 'Back', businesses_path, class: "btn btn-link" %>
