--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -22,17 +22,20 @@
 		</p>
 
 		<%= link_to "Write a Review", new_business_review_path(@business), class: "btn btn-primary" %>
+		<br><%= link_to 'Edit', edit_business_path(@business), class: "btn btn-link" %> |
+		<%= link_to 'Back', businesses_path, class: "btn btn-link" %>
 	</div>
 
 	<div class="col-md-9">
 	  <% if @reviews.blank? %>
 	  	<h3>No reviews yet. Ask for some!</h3>
 	  <% else %>
-	  	<%= @reviews.each do |review| %>
-		<p><%= review.name %></p>
-		<p><%= review.email %></p>
+	  	<% @reviews.each do |review| %>
+		<h3><%= review.name %></h3>
+		<h4><%= review.email %></h4>
 		<p><%= review.rating %></p>
 		<p><%= review.comment %></p>
+		<hr>
   		<% end %>
 	  <% end %>
 	
@@ -43,5 +46,4 @@
 
 
 
-<%= link_to 'Edit', edit_business_path(@business), class: "btn btn-link" %> |
-<%= link_to 'Back', businesses_path, class: "btn btn-link" %>
+
