--- a/app/views/pages/buy.html.erb
+++ b/app/views/pages/buy.html.erb
@@ -11,7 +11,7 @@
               <h2>$49 / month</h2>
               <p>Free Shipping</p>
               <p>1 GB Memory</p>
-              <p>1 Free Terminal</p>
+              <p class="strike">Free Terminals</p>
               <p>50 Email Credits / month</p>
               <p class="strike">Premium Verified Reviews</p>
               <p>24/7 Email Technical Support</p>
