--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,6 @@
 	<div class="col-md-6">
   		<h2>RavnReviews is the best way to capture customer feedback on-site and improve your overall reputation as a business!</h2>
   		<h3>Collect reviews on-site in your own personal database, identify common problems where you can improve your business, and immediately resolve negative customer experiences.<br><br>
-   		 Start today with packages as low as $49/month!<h3>
+   		<h3><a href="/pages/buy">Start today with packages as low as $49/month!</a><h3>
 	</div>
 </div>
