--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -18,7 +18,7 @@
 
 		<p>
 		  <strong>Website:</strong>
- 		 <%= link_to @business.website, @business.website %>
+ 		 <%= @business.website %>
 		</p>
 
 		<%= link_to "Write a Review", new_business_review_path(@business), class: "btn btn-primary" %>
@@ -33,7 +33,8 @@
 	  	<% @reviews.each do |review| %>
 		<h3><%= review.name %></h3>
 		<h4><%= review.email %></h4>
-		<p><%= review.rating %></p>
+		<div class="star-rating" data-score= <%= review.rating %> ></div>
+		<br>
 		<p><%= review.comment %></p>
 		<hr>
   		<% end %>
@@ -42,8 +43,13 @@
 	</div>
 </div>
 
-
-
-
-
+<script>
+	$('.star-rating').raty({
+		path:'https://s3-us-west-1.amazonaws.com/ratingboost/stars',
+		readOnly: true,
+		 score: function() {
+   		 return $(this).attr('data-score');
+  }
+	});
+</script>
 
