--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,10 @@
-<h1>Welcome to RavnReviews!</h1>
-<h2>We are the leading solution for Review Management, a platform that allows businesses to collect and monitor customer feedback. Sign up and start improving your business today!</h2>
+<div class="row">
+   <div class="col-md-6">
+   	<h1>Welcome to RavnReviews!</h1>
+	<h3>We are the leading solution for Review Management, a platform that allows businesses to collect and monitor customer feedback.</h3> 
+	<h3><a href="/pages/buy">Sign up and start improving your business today!</a></h3>
+   </div>
+   <div class="col-md-6">
+   	<img src="https://s3-us-west-1.amazonaws.com/ratingboost/tab.png" class="img-responsive" alt="Responsive image">
+   </div>
+ </div>
