--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -6,6 +6,9 @@
  		 <%= @business.name %>
 		</h2>
 
+		<div class="star-rating" data-score= <%= @avg_rating %> ></div><br>
+		<p><%= "#{@reviews.length} reviews" %></p>
+
 		<p>
 		  <strong>Address:</strong>
  		 <%= @business.address %>
@@ -30,14 +33,21 @@
 	  <% if @reviews.blank? %>
 	  	<h3>No reviews yet. Ask for some!</h3>
 	  <% else %>
-	  	<% @reviews.each do |review| %>
-		<h3><%= review.name %></h3>
-		<h4><%= review.email %></h4>
-		<div class="star-rating" data-score= <%= review.rating %> ></div>
-		<br>
-		<p><%= review.comment %></p>
-		<hr>
-  		<% end %>
+	  	<table class="table">
+	  		<tbody>
+	  			<% @reviews.each do |review| %>
+	  				<tr>
+	  					<td>
+	  						<h3><%= review.name %></h3>
+							<h4><%= review.email %></h4>
+							<div class="star-rating" data-score= <%= review.rating %> ></div><br>
+							<p><%= h(review.comment).gsub(/\n/, '<br/>').html_safe %></p>
+						</td>
+					</tr>
+	  			<% end %>
+	  		</tbody>
+	  	</table>
+
 	  <% end %>
 	
 	</div>
