--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -34,7 +34,7 @@
 
 <script>
   $('#star-rating').raty({
-    path:'https://s3-us-west-1.amazonaws.com/ratingboost/stars',
+    path:'https://s3-us-west-1.amazonaws.com/ratingboost/starsbig',
     scoreName: 'review[rating]'
   });
 </script>
