--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,4 @@
-<h1><div class="review-head">Please show your experience with us today</div></h1>
+<h1><div class="review-head">How was your experience today?</div></h1>
 
 <%= render 'form' %>
 
