--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -64,11 +64,12 @@
 
 #star-rating {
 	text-align:center;
+	margin-bottom: 50px;
 }
 
 .review-head {
 	text-align:center;
-	font-size: 92px;
+	font-size: 80px;
 }
 
 a {
@@ -76,7 +77,7 @@ a {
 }
 
 .container-fluid {
-	padding: 10px 120px;
+	padding: 10px 70px;
 	color: #fff;		
 	text-shadow: 1px 1px 1px #000;
 
