added logo review

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -71,6 +71,13 @@
 	text-align:center;
 	font-size: 80px;
 }
+.logo {
+	background-image: url("https://s3-us-west-1.amazonaws.com/ratingboost/logo.png"); 
+	 background-repeat:no-repeat;
+	 width: 120px;
+	 height: 58px;
+	 margin:auto;
+}
 
 a {
 	color: #fff;
