--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,4 @@
+<div class="header"><div class="logo"> </div></div>
 <h1><div class="review-head">How was your experience today?</div></h1>
 <%= render 'form' %>
 
