--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-md-3">
+	<div class="col-sm-4">
 		<%= image_tag @business.image_url %>
 
 		<h2>
@@ -29,7 +29,7 @@
 		<%= link_to 'Back', businesses_path, class: "btn btn-link" %>
 	</div>
 
-	<div class="col-md-9">
+	<div class="col-sm-8">
 	  <% if @reviews.blank? %>
 	  	<h3>No reviews yet. Ask for some!</h3>
 	  <% else %>
