--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -70,6 +70,7 @@
 .review-head {
 	text-align:center;
 	font-size: 80px;
+	margin-top:50px;
 }
 .logo {
 	background-image: url("https://s3-us-west-1.amazonaws.com/ratingboost/logo.png"); 
