integrate name into busi show

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,6 +67,14 @@
 	margin-bottom: 50px;
 }
 
+.review-comment {
+	font-size: 18px;
+}
+
+.review-email {
+	font-style: italic;
+}
+
 .review-head {
 	text-align:center;
 	font-size: 80px;
