--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,7 +44,7 @@
 
 <h3>Upgrade my account</h3>
 
-<p>Easily Upgrade! <%= button_to "Upgrade my account", registration_path(resource_name), class: "btn btn-success" %></p>
+<p>Easily Upgrade!<p> <%= link_to 'Upgrade my account', pages_buy_path, class: "btn btn-success" %></p>
 
 <h3>Cancel my account</h3>
 
