--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -7,20 +7,19 @@
       <th>Address</th>
       <th>Phone</th>
       <th>Website</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @businesses.each do |business| %>
       <tr>
-        <td><%= business.name %></td>
+        <td><%= link_to business.name, business %></td>
         <td><%= business.address %></td>
         <td><%= business.phone %></td>
         <td><%= business.website %></td>
-        <td><%= link_to 'Show', business %></td>
-        <td><%= link_to 'Edit', edit_business_path(business) %></td>
-        <td><%= link_to 'Destroy', business, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_business_path(business), class: "btn btn-primary" %></td>
+        <td><%= link_to 'Destroy', business, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
