--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
    <div class="col-md-6">
    	<h1>Welcome to RavnReviews!</h1>
 	<h3>We are the leading solution for Review Management, a platform that allows businesses to collect and monitor customer feedback.</h3> 
-	<h3><a href="/pages/buy">Sign up and start improving your business today!</a></h3>
+	<h3><a href="/pages/buy">Sign up and get access to our proprietary review management software and start improving your business today!</a></h3>
    </div>
    <div class="col-md-6">
    	<img src="https://s3-us-west-1.amazonaws.com/ratingboost/tab.png" class="img-responsive" alt="Responsive image">
