--- a/app/views/pages/buy.html.erb
+++ b/app/views/pages/buy.html.erb
@@ -8,14 +8,15 @@
               <h3 class="panel-title">Basic</h3>
             </div>
             <div class="panel-body">
-              <h2>$49 / month</h2>
+              <h2>$49 / month</h2>              
+              <p>Access to Review Software<p>
               <p>Free Shipping</p>
               <p>1 GB Memory</p>
-              <p class="strike">Free Terminals</p>
+              <p class="strike">Free Tablet Terminals</p>
               <p>50 Email Credits / month</p>
               <p class="strike">Premium Verified Reviews</p>
-              <p>24/7 Email Technical Support</p>
-              <%= link_to 'Start Today', new_business_path, class: "btn btn-primary"%>
+              <p>Business Hour Email Technical Support</p>
+              <%= link_to 'Start Today', businesses_path, class: "btn btn-primary"%>
             </div>
           </div>
         </div><!-- /.col-sm-4 -->
@@ -26,13 +27,14 @@
             </div>
             <div class="panel-body">
               <h2>$99 / month</h2>
+              <p>Access to Review Software<p>
               <p>Free Shipping</p>
               <p>5 GB Memory</p>
-              <p>1 Free Terminal</p>
+              <p>1 Free Tablet Terminal</p>
               <p>200 Email Credits / month</p>
               <p>1 Premium Verified Review</p>
               <p>24/7 Email Technical Support</p>
-              <%= link_to 'Start Today', new_business_path, class: "btn btn-primary"%>
+              <%= link_to 'Start Today', businesses_path, class: "btn btn-primary"%>
             </div>
           </div>
         </div><!-- /.col-sm-4 -->
@@ -43,13 +45,14 @@
             </div>
             <div class="panel-body">
               <h2>$199 / month</h2>
-                            <p>Free Shipping</p>
+              <p>Access to Review Software<p>
+              <p>Free Shipping</p>
               <p>Unlimited Memory</p>
-              <p>3 Free Terminals</p>
+              <p>3 Free Tablet Terminals</p>
               <p>Unlimited Email Credits / month</p>
               <p>10 Premium Verified Reviews</p>
               <p>24/7 Email and Phone Technical Support</p>
-              <%= link_to 'Start Today', new_business_path, class: "btn btn-primary"%>
+              <%= link_to 'Start Today', businesses_path, class: "btn btn-primary"%>
             </div>
           </div>
         </div><!-- /.col-sm-4 -->
