--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -3,3 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @business, class: "btn btn-link" %> |
+<%= link_to 'Back', businesses_path, class: "btn btn-link" %> 
