--- a/app/views/user_mailer/notify.html.erb
+++ b/app/views/user_mailer/notify.html.erb
@@ -8,11 +8,13 @@
       <p>Thank you very much for your feedback!</p>
     <p>We would really appreciate if you could leave your feedback on these sites as well! Thank you!</p>
     
-  <a href="http://www.google.com"><img src="https://s3-us-west-1.amazonaws.com/ratingboost/google.png"
+    <p>Search our name and click on our reviews to leave one</p>
+    <a href="http://www.google.com"><img src="https://s3-us-west-1.amazonaws.com/ratingboost/google.png"
     alt="Google"
-    width="192" height="74" border="0" /></a>    
-    <p>Yelp</p>
-    <p>Facebook</p>
-    <p>Angie's List</p>
+    width="192" height="74" border="0" /></a>  
+    <a href="http://www.yelp.com/"><img src="https://s3-us-west-1.amazonaws.com/ratingboost/yelp.png"
+    alt="Google"
+    width="192" height="93" border="0" /></a> 
   </body>
 </html>
+
