--- a/app/views/user_mailer/notify.text.erb
+++ b/app/views/user_mailer/notify.text.erb
@@ -1,1 +1,3 @@
-Thanks for joining and have a great day!
+Thank you very much for your feedback!
+
+We would really appreciate if you could leave your feedback on Google and Yelp as well! Thank you!
