--- a/app/views/user_mailer/notify.html.erb
+++ b/app/views/user_mailer/notify.html.erb
@@ -8,7 +8,7 @@
       <p>Thank you very much for your feedback!</p>
     <p>We would really appreciate if you could leave your feedback on these sites as well! Thank you!</p>
     
-    <p>Search our name and click on our reviews to leave one</p>
+    <p>Search our name and click on our reviews to leave one.</p>
     <a href="http://www.google.com"><img src="https://s3-us-west-1.amazonaws.com/ratingboost/google.png"
     alt="Google"
     width="192" height="74" border="0" /></a>  
