--- a/app/views/user_mailer/warning.html.erb
+++ b/app/views/user_mailer/warning.html.erb
@@ -1,1 +1,3 @@
-We are sorry!
+We really apologize for your experience. 
+
+The owner has been made aware of your experience and will be contacting you shortly.
