--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -18,7 +18,8 @@
         <td><%= business.address %></td>
         <td><%= business.phone %></td>
         <td><%= business.website %></td>
-        <td><%= link_to 'Edit', edit_business_path(business), class: "btn btn-primary" %></td>
+        <td><%= link_to 'Show', business, class: "btn btn-primary" %></td>
+        <td><%= link_to 'Edit', edit_business_path(business), class: "btn btn-success" %></td>
         <td><%= link_to 'Destroy', business, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
       </tr>
     <% end %>
